--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,46 @@
-@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import 'tailwindcss';
+
+@theme {
+	--color-primary: #222831; /* Primary Background */
+	--color-secondary: #393e46; /* Secondary Background */
+	--color-lucky: #00a676; /* Lucky Accent */
+	--color-unlucky: #d72323; /* Unlucky Accent */
+	--color-text: #eeeeee; /* Text Color */
+	--color-highlight: #007a5e; /* Button Hover / Highlights */
+	--color-border: #464e57; /* Borders & Dividers */
+}
+
+.font-inter {
+	font-family: 'Inter', sans-serif;
+}
+.font-dm-sans {
+	font-family: 'DM Sans', sans-serif;
+}
+.font-poppins {
+	font-family: 'Poppins', sans-serif;
+}
+
+.bg-primary {
+	background-color: var(--color-primary);
+}
+.bg-secondary {
+	background-color: var(--color-secondary);
+}
+.bg-lucky {
+	background-color: var(--color-lucky);
+}
+.bg-unlucky {
+	background-color: var(--color-unlucky);
+}
+.text-textWhite {
+	color: var(--color-text);
+}
+.hover\:bg-highlight:hover {
+	background-color: var(--color-highlight);
+}
+.border-border {
+	border-color: var(--color-border);
+}
