feat: enhance post creation with GIF and image upload limits; improve UI and add GIF preview functionality

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,7 @@
 	--color-secondary: #15181f;
 	--color-border: #ffffff4d;
 	--color-gray: #212227;
+	--color-gray-text:#ffffff99;
 	--color-unlucky: #d72323;
 	--color-white: #ffffff;
 	--color-highlight: #007a5e;
