feat: add feeling indicator and tags display in PostCard component; update styles in index.css

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@
 	--color-gray-text: #ffffff99;
 	--color-unlucky: #d72323;
 	--color-white: #ffffff;
-	--color-highlight: #007a5e;
+	--color-lucky: #007a5e;
 }
 
 /* src/styles/global.css */
