feat: add tailwind-scrollbar-hide for enhanced scrollbar customization and improve Home component layout

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -195,7 +195,7 @@ body {
 
 /* Custom scrollbar */
 .custom-scrollbar {
-	scrollbar-width:thin; /* For Firefox */
+	scrollbar-width: thin; /* For Firefox */
 	scrollbar-color: #ffffff99 #15181f; /* thumb and track colors (Firefox) */
 }
 
@@ -209,6 +209,10 @@ body {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-	background-color:#ffd700 ; /* gray-400 */
+	background-color: #ffd700; /* gray-400 */
 	border-radius: 9999px;
+}
+
+@utility no-scrollbar {
+	@apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
 }
